--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines":{
-    "node":"18.x"
+    "node":"18.00"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
