--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,7 @@
    "builds": [
      {
        "src": "index.js",
-       "use": "@now/node"
-     }
-   ],
-   "routes": [
-     {
-       "src": "/(.*)",
-       "dest": "index.js"
+       "use": "@vercel/node"
      }
    ]
  }
