--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,20 @@
    "version": 2,
    "builds": [
      {
-       "src": "index.js",
+       "src": "./index.js",
        "use": "@vercel/node"
      }
    ],
    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "index.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "OPTION"]
-      }
-    ]
+     {
+       "src": "/(.*)",
+       "dest": "index.js",
+       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+       "headers": {
+         "Access-Control-Allow-Origin": "*"
+       }
+     }
+   ]
  }
+
+
